src/main/resources/Krakatau-master/tests/assembler/bad/badlonglitval.j
.class public whocares
.super java/lang/Object
.const [1] = Long 999999999444444444444L
.end class
